# obscura-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  session.rs
src/agent/: client.rs  protocol.rs  server.rs
src/cmd/: add.rs  common.rs  delete.rs  export_dotenv.rs  get.rs  import.rs  init.rs  list.rs  lock.rs  mod.rs  remove.rs  rotate.rs  run.rs  unlock.rs
src/crypto/: aead.rs  kdf.rs
src/util/: errors.rs  io.rs  mod.rs  paths.rs
src/vault/: file.rs  manager.rs  mod.rs  model.rs
